--- a/res/layout/fragment_todo.xml
+++ b/res/layout/fragment_todo.xml
@@ -3,7 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:background="#d3d3d3">
+                android:background="@color/bg_color">
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
