--- a/ToDoReminder/src/main/res/layout/fragment_main.xml
+++ b/ToDoReminder/src/main/res/layout/fragment_main.xml
@@ -22,5 +22,12 @@
             bootstrap:bb_icon_right="fa-android"
             bootstrap:bb_type="success"
             />
+    <it.gmariotti.cardslib.library.view.CardViewNative
+            android:id="@+id/carddemo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginTop="12dp"/>
 
 </RelativeLayout>
