--- a/ToDoReminder/src/main/res/layout/fragment_add.xml
+++ b/ToDoReminder/src/main/res/layout/fragment_add.xml
@@ -1,52 +1,70 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
-                xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity$PlaceholderFragment">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent" android:layout_height="fill_parent">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
+                    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    tools:context=".MainActivity$PlaceholderFragment">
 
-    <!-- rounded edit text -->
-    <com.beardedhen.androidbootstrap.BootstrapEditText
-            android:id="@+id/addTitle"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:hint="Title"
-            android:textSize="24dp"
-            bootstrapbutton:be_roundedCorners="true"
-            android:layout_gravity="start"
-            bootstrapbutton:be_state="success"
-            />
-    <!-- rounded edit text -->
-    <com.beardedhen.androidbootstrap.BootstrapEditText
-            android:id="@+id/addText"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:hint="Text"
-            android:textSize="20dp"
-            bootstrapbutton:be_roundedCorners="true"
-            android:layout_gravity="start"
-            android:layout_below="@id/addTitle"
-            bootstrapbutton:be_state="success"
-            android:lines="5"/>
-    <!-- basic button -->
-    <com.beardedhen.androidbootstrap.BootstrapButton
-            android:id="@+id/Save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="@string/save_button"
-            android:layout_centerHorizontal="true"
-            bootstrap:bb_icon_left="fa-hand-o-right"
-            bootstrap:bb_type="success"
-            android:textSize="20sp"
-            android:layout_below="@id/addText"
-            />
+        <!-- rounded edit text -->
+        <com.beardedhen.androidbootstrap.BootstrapEditText
+                android:id="@+id/addTitle"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:hint="Title"
+                android:textSize="24sp"
+                bootstrapbutton:be_roundedCorners="true"
+                android:layout_gravity="start"
+                bootstrapbutton:be_state="success"
+                />
+        <!-- rounded edit text -->
+        <com.beardedhen.androidbootstrap.BootstrapEditText
+                android:id="@+id/addText"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:hint="Text"
+                android:textSize="20sp"
+                bootstrapbutton:be_roundedCorners="true"
+                android:layout_gravity="start"
+                android:layout_below="@id/addTitle"
+                bootstrapbutton:be_state="success"
+                android:lines="5"/>
+        <!-- rounded edit text -->
+        <com.beardedhen.androidbootstrap.BootstrapEditText
+                android:id="@+id/addDate"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:hint="Date"
+                android:textSize="20sp"
+                bootstrapbutton:be_roundedCorners="true"
+                android:layout_gravity="start"
+                android:focusable="false"
+                android:layout_below="@id/addText"
+                bootstrapbutton:be_state="success"
+                />
 
-</RelativeLayout>
+        <!-- basic button -->
+        <com.beardedhen.androidbootstrap.BootstrapButton
+                android:id="@+id/Save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="@string/save_button"
+                android:layout_centerHorizontal="true"
+                bootstrap:bb_icon_left="fa-hand-o-right"
+                bootstrap:bb_type="success"
+                android:textSize="20sp"
+                android:layout_below="@id/addDate"
+                />
+
+    </RelativeLayout>
+</ScrollView>
