--- a/ToDoReminder/src/main/res/layout/fragment_todo.xml
+++ b/ToDoReminder/src/main/res/layout/fragment_todo.xml
@@ -10,19 +10,19 @@
                     android:paddingTop="@dimen/activity_vertical_margin"
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     tools:context=".MainActivity$PlaceholderFragment">
-
-        <TextView
-                android:id="@+id/section_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        <!-- basic button -->
-        <it.gmariotti.cardslib.library.view.CardViewNative
-                android:id="@+id/carddemo"
+        <ListView
+                android:id="@+id/list_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="12dp"
-                android:layout_marginTop="12dp"/>
+                android:dividerHeight="1dp"
+                android:padding="10dp" />
+
+        <TextView
+                android:id="@+id/empty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/empty_list_text" />
 
     </RelativeLayout>
 </ScrollView>
