--- a/ToDoReminder/src/main/res/layout/fragment_todo.xml
+++ b/ToDoReminder/src/main/res/layout/fragment_todo.xml
@@ -6,7 +6,7 @@
               xmlns:card="http://schemas.android.com/apk/res-auto" >
 
     <it.gmariotti.cardslib.library.view.CardListView
-            android:id="@+id/myList"
+            android:id="@+id/myListToDo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             card:list_card_layout_resourceID="@layout/list_card_thumbnail_layout"
